# diet-calc

./: .gitlab-ci.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
src/formulas/: bmi.rs  bmr.rs  body_adiposity_index.rs  constants.rs  mod.rs  tdee.rs  waist_height_ratio.rs
src/utils/: validators.rs
tests/: lib.rs  test_bmi.rs  test_bmr.rs
